--- a/app/src/main/res/layout/activity_create_new_password.xml
+++ b/app/src/main/res/layout/activity_create_new_password.xml
@@ -8,17 +8,19 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/frame1"
-        android:layout_width="700dp"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/frame2"
         android:background="@color/secondaryBackground">
 
         <ImageView
             android:id="@+id/logo"
             android:layout_width="300dp"
             android:layout_height="120dp"
+            android:transitionName="logo_img"
             android:layout_marginTop="25dp"
             android:src="@drawable/svg_logo"
             app:layout_constraintStart_toStartOf="parent"
@@ -47,8 +49,10 @@
             app:layout_constraintTop_toBottomOf="@+id/title1" />
 
         <ImageView
+            android:id="@+id/onBoardingImg"
             android:layout_width="400dp"
-            android:layout_height="500dp"
+            android:layout_height="0dp"
+            android:transitionName="onBoardingImg"
             android:src="@drawable/svg_forget_password"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -58,6 +62,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/frame2"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         app:layout_constraintStart_toEndOf="@+id/frame1"
@@ -74,6 +79,7 @@
                 android:id="@+id/forgotBackbtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:transitionName="backBtn"
                 android:src="@drawable/vector_back_btn"
                 android:layout_marginTop="40dp"
                 app:layout_constraintHorizontal_bias="0.05"
@@ -96,21 +102,23 @@
 
             <TextView
                 android:id="@+id/title3"
-                android:layout_width="460dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/forgottitle"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
                 android:text="Use your registered e-mail address to reset your password."
                 android:layout_marginTop="10dp"
+                android:layout_marginEnd="40dp"
                 android:fontFamily="@font/roboto"
                 android:textFontWeight="400"
-                android:textColor="#828282" />
+                android:textColor="#828282"
+                app:layout_constraintTop_toBottomOf="@id/forgottitle"
+                app:layout_constraintStart_toStartOf="@id/forgotBackbtn"
+                app:layout_constraintEnd_toEndOf="parent"/>
 
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
+                android:layout_marginEnd="50dp"
                 app:layout_constraintStart_toStartOf="@id/title3"
                 app:layout_constraintEnd_toEndOf="@id/title3"
                 app:layout_constraintTop_toBottomOf="@+id/title3">
@@ -131,7 +139,7 @@
                     app:boxCornerRadiusBottomStart="10dp"
                     app:boxCornerRadiusBottomEnd="10dp"
                     app:boxCornerRadiusTopEnd="10dp"
-                    app:endIconMode="clear_text"
+                    app:endIconMode="password_toggle"
                     app:endIconTint="@color/black">
 
                     <com.google.android.material.textfield.TextInputEditText
@@ -161,7 +169,7 @@
                     app:boxCornerRadiusBottomStart="10dp"
                     app:boxCornerRadiusBottomEnd="10dp"
                     app:boxCornerRadiusTopEnd="10dp"
-                    app:endIconMode="clear_text"
+                    app:endIconMode="password_toggle"
                     app:endIconTint="@color/black">
 
                     <com.google.android.material.textfield.TextInputEditText
@@ -189,6 +197,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/reset_password"
+                        android:transitionName="Btn"
                         android:layout_marginHorizontal="20dp"
                         android:layout_gravity="center"
                         android:fontFamily="@font/roboto_bold"
