--- a/app/src/main/res/layout/activity_forget_password_screen.xml
+++ b/app/src/main/res/layout/activity_forget_password_screen.xml
@@ -8,9 +8,10 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/frame1"
-        android:layout_width="700dp"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/frame2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:background="@color/secondaryBackground">
@@ -19,6 +20,7 @@
             android:id="@+id/logo"
             android:layout_width="300dp"
             android:layout_height="120dp"
+            android:transitionName="logo_img"
             android:layout_marginTop="25dp"
             android:src="@drawable/svg_logo"
             app:layout_constraintStart_toStartOf="parent"
@@ -47,8 +49,11 @@
             app:layout_constraintTop_toBottomOf="@+id/title1" />
 
         <ImageView
+            android:id="@+id/onBoardingImg"
             android:layout_width="400dp"
-            android:layout_height="500dp"
+            android:layout_height="0dp"
+            android:layout_marginVertical="10dp"
+            android:transitionName="onBoardingImg"
             android:src="@drawable/svg_forget_password"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -58,6 +63,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/frame2"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         app:layout_constraintStart_toEndOf="@+id/frame1"
@@ -74,6 +80,7 @@
                 android:id="@+id/forgotBackbtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:transitionName="backBtn"
                 android:src="@drawable/vector_back_btn"
                 android:layout_marginTop="40dp"
                 app:layout_constraintHorizontal_bias="0.05"
@@ -96,16 +103,17 @@
 
             <TextView
                 android:id="@+id/title3"
-                android:layout_width="460dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/forgottitle"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
                 android:text="@string/enter_the_email_address_you_used"
                 android:layout_marginTop="10dp"
+                android:layout_marginEnd="20dp"
                 android:fontFamily="@font/roboto"
                 android:textFontWeight="400"
-                android:textColor="#828282" />
+                android:textColor="#828282"
+                app:layout_constraintTop_toBottomOf="@id/forgottitle"
+                app:layout_constraintStart_toStartOf="@id/forgotBackbtn"
+                app:layout_constraintEnd_toEndOf="parent"/>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/forgot_layout"
@@ -113,9 +121,7 @@
                 android:layout_height="wrap_content"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                 android:hint="Email address"
-                android:textColorHint="@color/black"
                 app:boxStrokeColor="@color/black"
-                app:hintTextColor="@color/secondary"
                 android:layout_marginTop="20dp"
                 app:boxStrokeWidthFocused="2dp"
                 app:boxCornerRadiusTopStart="10dp"
@@ -143,6 +149,7 @@
                 android:id="@+id/resetCard"
                 android:layout_width="180dp"
                 android:layout_height="45dp"
+                android:transitionName="Btn"
                 app:layout_constraintTop_toBottomOf="@+id/forgot_layout"
                 android:layout_marginTop="30dp"
                 android:backgroundTint="@color/black"
