--- a/app/src/main/res/layout/fragment_rates_and_inventory.xml
+++ b/app/src/main/res/layout/fragment_rates_and_inventory.xml
@@ -68,7 +68,6 @@
             android:id="@+id/source_layout"
             android:layout_width="350dp"
             android:layout_height="45dp"
-            android:elevation="8dp"
             app:layout_constraintTop_toBottomOf="@id/Heading"
             android:layout_marginTop="40dp"
             android:layout_marginStart="20dp"
@@ -100,7 +99,6 @@
         android:id="@+id/rates_layout"
         android:layout_width="200dp"
         android:layout_height="45dp"
-        android:elevation="8dp"
         app:layout_constraintTop_toBottomOf="@id/Heading"
         android:layout_marginTop="40dp"
         android:layout_marginStart="10dp"
@@ -133,7 +131,6 @@
         android:id="@+id/roomType_layout"
         android:layout_width="200dp"
         android:layout_height="45dp"
-        android:elevation="8dp"
         app:layout_constraintTop_toBottomOf="@id/Heading"
         android:layout_marginTop="40dp"
         android:layout_marginStart="10dp"
@@ -203,7 +200,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="500dp"
         android:layout_marginHorizontal="20dp"
         app:layout_constraintTop_toBottomOf="@id/source_layout"
         android:layout_marginTop="20dp"
@@ -217,7 +214,7 @@
             android:orientation="horizontal"
             android:gravity="center"
             android:padding="10dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="5dp"
             >
 
             <ImageView
@@ -255,15 +252,28 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="45dp"
             android:layout_alignParentTop="true"
-            android:layout_marginTop="15dp"
             android:layout_alignParentEnd="true"
+            android:layout_marginTop="5dp"
             android:layout_toEndOf="@id/static_calender_layout"
             android:layout_marginEnd="10dp"
-
             android:orientation="horizontal"
+            android:nestedScrollingEnabled="false"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
+            tools:listitem="@layout/item_calender_view"
+            android:paddingBottom="10dp"
+            app:layout_constraintRight_toRightOf="parent" >
+
+        </androidx.recyclerview.widget.RecyclerView>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/inventory_recycler"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/calender_recycler"
+            android:orientation="horizontal"
+            tools:listitem="@layout/item_remaining_inventory"
+            />
 
     </RelativeLayout>
 
