--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -56,6 +56,34 @@
         <item name="android:textSize">@dimen/H5</item>
     </style>
 
+    //OtaName
+    <style name="otaNameText" parent="android:Widget.TextView">
+        <item name="android:textColor">@color/black</item>
+        <item name="fontFamily">@font/roboto_medium</item>
+        <item name="android:textSize">@dimen/H5</item>
+    </style>
+
+    //TextforRatesandInventory
+    <style name="inventoryText" parent="android:Widget.TextView">
+        <item name="android:textColor">#1936CB</item>
+        <item name="fontFamily">@font/roboto_bold</item>
+        <item name="android:textSize">@dimen/H5</item>
+    </style>
+
+    //TextforRates
+    <style name="rateText" parent="android:Widget.TextView">
+        <item name="android:textColor">@color/textColor</item>
+        <item name="fontFamily">@font/roboto_medium</item>
+        <item name="android:textSize">@dimen/H5</item>
+    </style>
+
+    //Ota Rates
+    <style name="otaRates" parent="android:Widget.TextView">
+        <item name="android:textColor">@color/subtitle</item>
+        <item name="fontFamily">@font/roboto_medium</item>
+        <item name="android:textSize">@dimen/H5</item>
+    </style>
+
     <style name="subText" parent="android:Widget.TextView">
         <item name="android:textColor">@color/secondary</item>
         <item name="fontFamily">@font/roboto_light</item>
